# locc4j

./: CHANGELOG.md  Performance.md  README.md  build.gradle.kts  settings.gradle.kts
.github/: FUNDING.yml
buildSrc/: build.gradle.kts
buildSrc/src/main/java/org/cthing/locc4j/plugins/: LanguageEntry.java  LanguagePlugin.java
buildSrc/src/main/resources/org/cthing/locc4j/: Language.java.ftl
conf/: languages.json
dev/checkstyle/: suppressions.xml
dev/spotbugs/: suppressions.xml
gradle/: libs.versions.toml
languagePlugin/: build.gradle.kts  settings.gradle.kts
languagePlugin/src/main/java/org/cthing/locc4j/plugins/: LanguageEntry.java  LanguagePlugin.java  LanguageTask.java  package-info.java
languagePlugin/src/main/resources/org/cthing/locc4j/: Language.java.ftl
src/main/java/org/cthing/locc4j/: BlockDelimiter.java  CharData.java  Config.java  CountUtils.java  Counter.java  CountingTreeWalker.java  Counts.java  Embedding.java  FileCounter.java  FileStats.java  LanguageStats.java  RegexUtils.java  Stats.java  StatsUtils.java  package-info.java
src/test/java/org/cthing/locc4j/: CharDataTest.java  ConfigTest.java  CountUtilsTest.java  CounterTest.java  CountingTreeWalkerTest.java  CountsTest.java  EmbeddingTest.java  FileCounterTest.java  FileDataProvider.java  FileStatsTest.java  LanguageStatsTest.java  LanguageTest.java  RegexUtilsTest.java  StatsTest.java  StatsUtilsTest.java  TreeDataExtension.java
src/test/resources/data/: Daml.daml  Dockerfile  MSBuild.csproj  Makefile  NuGet.Config  PKGBUILD  Rakefile  SConstruct  Tera.tera  VisualStudio.sln  VisualStudio.vcproj  abap.abap  abnf.abnf  actionscript.as  ada.ada  agda.agda  alloy.als  apl.apl  arduino.ino  asciidoc.adoc  asm.asm  asn1.asn1  asp.asp  aspnet.aspx  atlocal.in  ats.dats  autohotkey.ahk  autoit.au3  avalonia.axaml  awk.awk  batch.bat  bazel.bzl  bean.bean  brightscript.brs  build.gradle  build.gradle.kts  c.c  c.h  cabal.cabal  cassius.cassius  (+210 more)
src/test/resources/tree/.dir2/: file-2-1.js  file-2-2.rb  file-2-3.cpp
src/test/resources/tree/dir1/: file-1-4.unknown
src/test/resources/tree/dir1/dir3/: file-3-1.ts  file-3-2.py
