cabal-version: 2.2
name:          Cabal-syntax
version:       3.11.0.0
copyright:     2003-2023, Cabal Development Team (see AUTHORS file)
license:       BSD-3-Clause
license-file:  LICENSE
author:        Cabal Development Team <cabal-devel@haskell.org>
maintainer:    cabal-devel@haskell.org
homepage:      http://www.haskell.org/cabal/
bug-reports:   https://github.com/haskell/cabal/issues
synopsis:      A library for working with .cabal files
description:
    This library provides tools for reading and manipulating the .cabal file
    format.
category:       Distribution
build-type:     Simple

extra-source-files:
  README.md ChangeLog.md

source-repository head
  type:     git
  location: https://github.com/haskell/cabal/
  subdir:   Cabal-syntax

library
  default-language: Haskell2010
  hs-source-dirs: src

  build-depends:
    array      >= 0.4.0.1  && < 0.6,
    base       >= 4.9      && < 5,
    binary     >= 0.7      && < 0.9,
    bytestring >= 0.10.0.0 && < 0.13,
    containers >= 0.5.0.0  && < 0.8,
    deepseq    >= 1.3.0.1  && < 1.6,
    directory  >= 1.2      && < 1.4,
    filepath   >= 1.3.0.1  && < 1.6,
    mtl        >= 2.1      && < 2.4,
    parsec     >= 3.1.13.0 && < 3.2,
    pretty     >= 1.1.1    && < 1.2,
    text       (>= 1.2.3.0 && < 1.3) || (>= 2.0 && < 2.2),
    time       >= 1.4.0.1  && < 1.13,
    -- transformers-0.4.0.0 doesn't have record syntax e.g. for Identity
    -- See also https://github.com/ekmett/transformers-compat/issues/35
    transformers (>= 0.3      && < 0.4) || (>=0.4.1.0 && <0.7)

  ghc-options: -Wall -fno-ignore-asserts -fwarn-tabs -fwarn-incomplete-uni-patterns -fwarn-incomplete-record-updates

  {-
    Comment
  -}
  if impl(ghc >= 8.0)
    ghc-options: -Wcompat -Wnoncanonical-monad-instances

  if impl(ghc >= 8.0) && impl(ghc < 8.8)
    ghc-options: -Wnoncanonical-monadfail-instances

  if impl(ghc >= 8.10)
    ghc-options: -Wunused-packages

  build-tool-depends: alex:alex

  exposed-modules:
    Distribution.Backpack
    Distribution.CabalSpecVersion
    Distribution.Compat.Binary
    Distribution.Compat.CharParsing
    Distribution.Compat.DList
    Distribution.Compat.Exception
    Distribution.Compat.Graph
    Distribution.SPDX.LicenseExpression
    Distribution.Utils.Structured
    Distribution.Version
    Language.Haskell.Extension

  other-extensions:
    BangPatterns
    CPP
    DefaultSignatures
    DeriveDataTypeable
    DeriveFoldable
